[gd_scene load_steps=12 format=2]

[ext_resource path="res://main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Plane.tscn" type="PackedScene" id=2]
[ext_resource path="res://world2.tscn" type="PackedScene" id=3]
[ext_resource path="res://TeleportScreen.gd" type="Script" id=4]
[ext_resource path="res://Universe.gd" type="Script" id=5]

[sub_resource type="ProceduralSky" id=13]
sky_top_color = Color( 0.223529, 0.627451, 0.85098, 1 )
sky_horizon_color = Color( 0.862745, 0.898039, 0.921569, 1 )
ground_bottom_color = Color( 0.215686, 0.47451, 0.678431, 1 )
ground_horizon_color = Color( 0.34902, 0.643137, 0.839216, 1 )

[sub_resource type="Environment" id=14]
background_mode = 2
background_sky = SubResource( 13 )
ssao_enabled = true
ssao_intensity = 8.0
ssao_color = Color( 0.192157, 0.490196, 0.12549, 1 )
ssao_quality = 0
ssao_edge_sharpness = 0.5

[sub_resource type="Animation" id=18]
resource_name = "test"

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "into_teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "outof_teleport"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Universe" type="Spatial"]
script = ExtResource( 5 )

[node name="Plane" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.999964, 0, -0.0084822, 0, 1, 0, 0.0084822, 0, 0.999964, -3.97181, 15.8383, 0 )

[node name="base_world" parent="." instance=ExtResource( 1 )]

[node name="world2" parent="." instance=ExtResource( 3 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WorldEnvironment"]
anims/test = SubResource( 18 )

[node name="TeleportScreen" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="TeleportScreen"]
margin_right = 3712.0
margin_bottom = 2588.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TeleportScreen"]
anims/RESET = SubResource( 15 )
anims/into_teleport = SubResource( 16 )
anims/outof_teleport = SubResource( 17 )

[connection signal="animation_finished" from="TeleportScreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="TeleportScreen/AnimationPlayer" to="TeleportScreen" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="TeleportScreen/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]

[editable path="Plane"]
[editable path="base_world"]
[editable path="world2"]
